--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="12dp"
             android:layout_toRightOf="@id/recipeButton"
-            android:text="My Profile" />
+            android:text="Log out" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
